// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  style={
    [
      {
        "fontSize": 26,
        "lineHeight": 32,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  style={
    [
      {
        "fontSize": 26,
        "lineHeight": 32,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 24,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 22,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  color="bluegreyLight"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 22,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 18,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 18,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  color="blue"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  color="bluegreyDark"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  color="bluegrey"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 8`] = `
<Text
  color="bluegreyLight"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 9`] = `
<Text
  color="white"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 22,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 5`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 6`] = `
<Text
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 7`] = `
<Text
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 4`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#C02927",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 14,
      "lineHeight": 21,
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Semibold"
  font="TitilliumSansPro"
  fontStyle={
    {
      "fontSize": 16,
      "textDecorationLine": "underline",
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "textDecorationLine": "underline",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="Semibold"
>
  Text
</Text>
`;

exports[`Test Typography Components Monospace Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="RobotoMono"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Roboto Mono",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;
